# email_cal_assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  terminal_main.py
src/: __init__.py  calendar_handler.py  chat_interface.py  email_handler.py  logger.py  my_config.py  reach_agent.py
